멤버 이미지 코드랑 디자인 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -153,7 +153,7 @@
             border-color: white;
         }
 
-        .click_img {
+        .img {
             width: 200px;
             height: 200px;
             border-radius: 100%;
@@ -321,8 +321,9 @@
             <div class="row row-cols-1 row-cols-md-5 g-2">
                 <div class="col">
                     <div class="card h-100">
-                        <img src="https://ca.slack-edge.com/T043597JK8V-U053UK80VR8-cbc4d9e1783b-512" class="click_img"
-                            alt="...">
+                    <a href="sub.html">
+                        <img src="https://ca.slack-edge.com/T043597JK8V-U053UK80VR8-cbc4d9e1783b-512" class="img">
+                      </a>
                         <div class="name">
                             <h3>김희석</h3>
                         </div>
@@ -330,8 +331,10 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="https://ca.slack-edge.com/T043597JK8V-U051WD9LCNP-45ff45329ac6-512"
-                            class="click_img alt=" ... onclick="profile()">
+                        <a href="sub.html">
+                            <img src="https://ca.slack-edge.com/T043597JK8V-U051WD9LCNP-45ff45329ac6-512" class="img">
+                          </a>
+                          <br>
                         <div class="name">
                             <h3>이은비</h3>
                         </div>
@@ -339,8 +342,10 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="https://ca.slack-edge.com/T043597JK8V-U0532LT9LLE-58e265f5a665-512" class="click_img"
-                            alt="..." onclick="profile()">
+                        <a href="sub.html">
+                            <img src="https://ca.slack-edge.com/T043597JK8V-U0532LT9LLE-58e265f5a665-512" class="img">
+                          </a>
+                          <br>
                         <div class="name">
                             <h3>이현경</h3>
                         </div>
@@ -348,8 +353,10 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="https://ca.slack-edge.com/T043597JK8V-U052A5UUG06-fd387358fc87-512" class="click_img"
-                            alt="..." onclick="profile()">
+                        <a href="sub.html">
+                            <img src="https://ca.slack-edge.com/T043597JK8V-U052A5UUG06-fd387358fc87-512" class="img">
+                          </a>
+                          <br>
                         <div class="name">
                             <h3>김장원</h3>
                         </div>
@@ -357,8 +364,10 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="https://ca.slack-edge.com/T043597JK8V-U053QSM8MT4-e435cca492ea-512" class="click_img"
-                            alt="..." onclick="profile()">
+                        <a href="sub.html">
+                            <img src="https://ca.slack-edge.com/T043597JK8V-U053QSM8MT4-e435cca492ea-512" class="img">
+                          </a>
+                          <br>
                         <div class="name">
                             <h3>임수영</h3>
                         </div>
