--- a/templates/index.html
+++ b/templates/index.html
@@ -43,15 +43,16 @@
         /* 전체 바디 사이즈 1320px */
         .wrap {
             /* 웹종반 1-9 강의 참고 */
-            text-align: center;
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: center;
 
-            width: 1320px;
-            height: 7000px;
+            width: 1920px;
+            height: auto;
+            margin: 20px 320px 0px 320px;
 
-            margin: 0px auto 0px auto;
+            text-align: center;
         }
         /* -------------------------------------- 여기까지 김장원 --------------------------------------  */
         #main_banner {
@@ -61,7 +62,7 @@
             justify-content: center;
 
             width: 1320px;
-            height: 100px;
+            height: 200px;
             padding-top: 10px;
         }
 
@@ -122,18 +123,18 @@
             width: 50px;
             height: 50px;
             border: 1px solid black;
-            /* z-index: 10;
-            display: flex; */
+            z-index: 10;
+            display: flex;
             position: fixed;
-            bottom: 20px;
+            bottom: 50px;
             right:20px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             border: 0px;
-
         }
+
         /* -------------------------------------- 여기까지 김장원 --------------------------------------  */
 
         /* -------------------------------------- 아래는 이은비 -------------------------------------- */
