--- a/templates/sub.html
+++ b/templates/sub.html
@@ -42,10 +42,10 @@
 
         .container {
             position: absolute;
-            width: 1140px;
+            width: 1320px;
+            margin: 0px auto 0px auto;
             height: 890px;
-            left: 390px;
-            top: 29px;
+
         }
 
         .imoge {
