--- a/templates/sub.html
+++ b/templates/sub.html
@@ -199,10 +199,10 @@
                     let photo = a['photo']
                     let name = a['name']
                     let about_me = a['about_me']
-                    let q1 = a['q1']
-                    let q2 = a['q2']
-                    let q3 = a['q3']
-                    let q4 = a['q4']
+                    let Q1 = a['Q1']
+                    let Q2 = a['Q2']
+                    let Q3 = a['Q3']
+                    let Q4 = a['Q4']
                     
                     let temp_html = `<div class="container" id="container">
                                         <div>
@@ -223,22 +223,22 @@
                                             <div class="text">
                                                 <details>
                                                     <summary>사용할 수 있는 언어</summary>
-                                                    <p>${q1}</p>
+                                                    <p>${Q1}</p>
                                                 </details>
 
                                                 <details>
                                                     <summary>자신의 장점</summary>
-                                                    <p>${q2}</p>
+                                                    <p>${Q2}</p>
                                                 </details>
 
                                                 <details>
                                                     <summary>나의 MBTI</summary>
-                                                    <p>${q3}</p>
+                                                    <p>${Q3}</p>
                                                 </details>
 
                                                 <details>
                                                     <summary>TMI</summary>
-                                                    <p>${q4}</p>
+                                                    <p>${Q4}</p>
                                                 </details>
                                             </div>
                                         </div>
