sub4.html 수정 후 저장

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
             align-items: center;
 
             width: 1320px;
-            height: 2500px;
+            height: 7000px;
             /* 나중에 값 변경할 것 */
             margin: 0px auto 0px auto;
             text-align: center;
@@ -426,8 +426,9 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
+                        <a href= {{url_for('sub4')}}>
                         <img src="https://ca.slack-edge.com/T043597JK8V-U052A5UUG06-fd387358fc87-512" class="click_img"
-                            alt="..." onclick="profile()">
+                            alt="..." onclick="profile()"></a>
                         <div class="name">
                             <h3>김장원</h3>
                         </div>
