--- a/templates/sub2.html
+++ b/templates/sub2.html
@@ -72,12 +72,10 @@
             top: 29px;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             border-radius: 50px;
-            background-size: cover;
-            background-image: url('https://ca.slack-edge.com/T043597JK8V-U052A5UUG06-fd387358fc87-512');
+            background-image: url('https://ca.slack-edge.com/T043597JK8V-U051WD9LCNP-45ff45329ac6-512');
             background-repeat: no-repeat;
             background-position: center; 
         }
-
 
         .address {
             position: absolute;
@@ -228,16 +226,14 @@
             });
         });
 
-
         $(document).ready(function () {
             show_profiles();
         });
         function show_profiles() {
-            fetch('subA4').then(res => res.json()).then(data => {
+            fetch('subA2').then(res => res.json()).then(data => {
                 let rows = data['result']
-                console.log(rows)
                 $('#container').empty();
-                rows.forEach((a) => {
+                rows.forEach((a) => {  
                     let imoge = a['imoge']
                     let blog1 = a['blog1']
                     let blog2 = a['blog2']
@@ -284,11 +280,12 @@
                                             <details>
                                                 <summary>TMI</summary>
                                                 <li>${q4}</li
-                                            </details>
+                                                </details>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <button type="button" onclick="location.href='http://localhost:5000/' " class="button">뒤로가기</button>`
-                                                $('#container').append(temp_html)
+                                        <button type="button" onclick="location.href='http://localhost:5000/' " class="button">뒤로가기</button>
+                                    </div>`
+                    $('#container').append(temp_html)
                 })
             })
         }
