--- a/templates/sub2.html
+++ b/templates/sub2.html
@@ -297,17 +297,17 @@
     <div class="container" id="container">
         <div>
             <!-- 각자 상징 이모티콘으로 바꾸시면 될 듯함 -->
-            <text class="imoge">🐶</text>
+            <text class="imoge">🍜</text>
         </div>
         <!-- 사진은 .photo에서 백그라운드 값 바꾸시면 돼요 -->
-        <div class="photo"></div> 
+        <div class="photo"><img src="https://ca.slack-edge.com/T043597JK8V-U051WD9LCNP-45ff45329ac6-512" class="img" alt="..."></a></div> 
         <!-- 주소는 하이퍼링크 입니다 -->
-        <a class="address" href="https://velog.io/@hoy503007">www.naver.com</a>
+        <a class="address" href="https://velog.io/@owiiwo">www.naver.com</a>
         <div>
-            <text class="name">홍길동</text>
+            <text class="name">이은비</text>
         </div>
         <div id="test" class="about_me_area">
-            <text class="about_me_text">자기소개</text>
+            <text class="about_me_text">안녕하세요! E1I4의 페이지에서 팀 소개를 제작한 이은비입니다. </text>
         </div>
 
         <div id="tmi_area">
@@ -320,19 +320,18 @@
 
                 <details>
                     <summary>자신의 장점</summary>
-                    <li>끈기가 있다.</li>
-                    <li>성실해요 </li>
+                    <li>항상 밝고 긍정적입니다!😉</li>
                 </details>
 
                 <details>
                     <summary>나의 MBTI</summary>
-                    <li>AAAA</li>
+                    <li>ISTJ</li>
                 </details>
 
                 <details>
                     <summary>TMI</summary>
-                    <li></li>
-                    <li></li>
+                    <li>컵누들을 좋아합니다😍'</li>
+                    <li>그래서 종류별로 1박스씩 쟁여놨습니다!</li>
                 </details>
             </div>
         </div>
